src/OpenGl/OpenGl_Element.hxx
@@ -60,6 +60,9 @@ public:
   //! Return TRUE if primitive type generates shaded triangulation (to be used in filters).
   virtual Standard_Boolean IsFillDrawMode() const { return false; }
 
+  //! Returns estimated GPU memory usage for holding data without considering overheads and allocation alignment rules.
+  virtual Standard_Size EstimatedDataSize() const { return 0; }
+
   //! Update parameters of the drawable elements.
   virtual void SynchronizeAspects() {}
 
