src/OpenGl/OpenGl_PrimitiveArray.hxx
@@ -58,6 +58,9 @@ public:
   //! Release OpenGL resources (VBOs)
   Standard_EXPORT virtual void Release (OpenGl_Context* theContext) Standard_OVERRIDE;
 
+  //! Returns estimated GPU memory usage for holding data without considering overheads and allocation alignment rules.
+  Standard_EXPORT virtual Standard_Size EstimatedDataSize() const Standard_OVERRIDE;
+
   //! Return true if VBOs initialization has been performed.
   //! VBO initialization is performed during first Render() call.
   //! Notice that this flag does not indicate VBOs validity.
